Footer alignment corrected

--- a/market/src/index.css
+++ b/market/src/index.css
@@ -794,11 +794,27 @@ button div {
   }
 }
 
+
+/* footer */
+
+.appjs-content{
+  margin-bottom: 65px;
+}
 .footer{
+  font-size: small;
+  position: fixed;
+  bottom: 0;
+  width: 100%;
+  min-height: 50px;
+  max-height: 60px;
   background-color: #333;
-  padding-top: 10px;
-  padding-bottom: 10px;
+  margin-top: 100px;
+  padding-top: 4px;
+  padding-bottom: 4px;
   color:#ffffff;
   text-align: center;
   margin-bottom: 0%;
+}
+.footer h6{
+  font-size: small;
 }
